2013-03-03  Louis-Noel Pouchet  <pouchet@cs.ucla.edu>

	* driver/pocc/driver-ponos.c,
	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c: Add and manage new options for Ponos.

2013-03-03  Louis-Noel Pouchet  <pouchet@cs.ucla.edu>
	This patch add support for Ponos in the devel mode of PoCC.

	* configure.ac: Bump to pocc 1.3-pre.

	* generators/scripts/inscop: Avoid double operations in codegen.

	* driver/pocc/driver-ponos.c,
	* driver/pocc/include/pocc/driver-ponos.h: New. Unit to control
	the Ponos scheduler.
	* driver/src/pocc.c,
	* driver/src/Makefile.am,
	* driver/pocc/Makefile.am: Update accordingly.

	* driver/pocc/driver-pastops.c: Add support for --past-super-hoist.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/src/options.h,
	* driver/src/options.c: Add the Ponos-related options.

2013-02-18  Louis-Noel Pouchet  <pouchet@cs.ucla.edu>
	Ready-to-release patch.

	* doc/pocc.texi: Update the documentation.
	* config/stable/configure.cfg,
	* config/local/configure.cfg: Update to latest module id.

2013-02-18  Louis-Noel Pouchet  <pouchet@cs.ucla.edu>

	* configure.ac: Bump to pocc 1.2.
	* driver/src/getopts.h,
	* driver/src/options.c: Improve the option help.
	* config/local/configure.cfg: Update to latest versions of modules.

2012-04-15  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/hls/driver.cfg,
	* config/hls/configure.cfg: Update to ISL-current and Barvinok 0.35.

2012-04-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/Makefile.am,
	* driver/src/Makefile.am: Add missing reference to the LMP module.

2012-04-12  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* config/hls/driver.cfg,
	* config/hls/configure.cfg: Add the LMP (Local Memory Promotion)
	module.

2012-04-08  Louis-Noel Pouchet  <pouchet@cse.ohio-state.edu>

	* driver/pocc/driver-pastops.c: Detect and transform parallel
	loops in full-tiles.
